# MIHAYOU_gradesManageSystem

./: CMakeLists.txt  grades.txt  input.txt  readme.md  run.bat  run.sh  run_copy.bat  test.bat  test.sh  test_copy.bat  tiny-test.txt
bin_copy/: grades.txt
src/: main_L.cpp  main_W.cpp
src/GradeManager/: CMakeLists.txt  GradeManager.cpp  GradeManager.h
src/Student/: CMakeLists.txt  Student.cpp  Student.h
src/plugins/: CMakeLists.txt  PluginInterface.h
src/plugins/DefaultDataPlugin/: DefaultDataPlugin.cpp  DefaultDataPlugin.h
src/plugins/TimerPlugin/: TimerPlugin.cpp  TimerPlugin.h
test/: CMakeLists.txt
test/GradeManager/: GradeManagerTest.cpp
test/Student/: StudentTest.cpp
test/plugins/DefaultDataPlugin/: DefaultDataPluginTest.cpp
test/plugins/TimerPlugin/: TimerPluginTest.cpp
